<resources>
    <string name="app_name" translatable="false">RathaanElectronics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="loading_title_text">Loading..</string>
    <string name="search_here">Search for products with name or SKU</string>
    <string name="welcome_ratan">Welcome to Al Rathaan</string>
    <string name="email">Email</string>
    <string name="contact_email">Email: info@rathaan.com</string>
    <string name="submit">Submit</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="intro_text">Signup to get started and experience \n great shoping deals</string>
    <string name="start_now">Start Now</string>
    <string name="payment">Payment</string>
    <string name="online_payment">Online Payment</string>
    <string name="sub_total">Sub Total</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">APPLY</string>
    <string name="pick_up">Pickup</string>
    <string name="home_delivery">Home delivery</string>
    <string name="total">TOTAL</string>
    <string name="total_label">Total:</string>
    <string name="continue_">Continue</string>
    <string name="installation_charge">Installation charge</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="discount">Discount</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="add_address">Add Address</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="address">Address*</string>
    <string name="governarate">Governarate*</string>
    <string name="area">Area*</string>
    <string name="block">Block*</string>
    <string name="street_address">Street Address*</string>
    <string name="house_building_no">House/Building No*</string>
    <string name="avenue">Avenue</string>
    <string name="mobile_1">Mobile 1*</string>
    <string name="mobile_2">Mobile 2</string>
    <string name="email_address">Email Address*</string>
    <string name="save">Save</string>
    <string name="city">City*</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="bundle_offers">Bundle Offers</string>
    <string name="offer_end_soon">Offer ends soon</string>
    <string name="add_wishlist">Add to wishlist</string>
    <string name="related_products">Related products</string>
    <string name="quantity">Quantity:</string>
    <string name="add_cart">Add to cart</string>
    <string name="product_not_available">Product available only for registered user</string>
    <string name="remove_wishlist">Remove Wishlist</string>
    <string name="cart">Cart</string>
    <string name="empty_cart">Cart is empty</string>
    <string name="compare">Compare</string>
    <string name="availability">Availability</string>
    <string name="hand_over">Hand Over</string>
    <string name="spec">Specification</string>
    <string name="deals_offer">Deals &amp; Offers</string>
    <string name="same_day">Same Day</string>
    <string name="next_day">Next Day</string>
    <string name="choose_date">Choose date</string>
    <string name="prefered_delivery_time">Preferred Delivery Time</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="order_notes_optional">Order Notes(Optional)</string>
    <string name="pay_using_royalty_coin">Pay Using Loyalty Coin</string>
    <string name="balance">Balance</string>
    <string name="pay_using_wallet">Pay Using Wallet</string>
    <string name="knet">KNET</string>
    <string name="edit_profile">Edit profile</string>
    <string name="conform_password">Confirm Password</string>
    <string name="price">Price</string>
    <string name="close">Close</string>
    <string name="filter">Filter</string>
    <string name="hotdeals">Hot Deals</string>
    <string name="new_arrival">New Arrival</string>
    <string name="top20">Top20</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="view_all">View all</string>
    <string name="loyalty_coin">Loyalty Coin</string>
    <string name="royalty_coin">%1s Loyalty Coin are the on the way</string>
    <string name="royalty_coin_credited_message">Loyalty Coin are Credited after the return Period is over</string>
    <string name="recent_coin_activity">Recent Coin Activity</string>
    <string name="coin">Coin</string>
    <string name="my_wallet">My Wallet</string>
    <string name="wallet_withdraw">Wallet you can withdraw any time</string>
    <string name="withdraw">withdraw</string>
    <string name="request_withdraw">Request For Withdraw</string>
    <string name="recent_wallet_activity">Recent Wallet Activity</string>
    <string name="wallet">Wallet</string>
    <string name="notifications">Notifications</string>
    <string name="order_history">Order History</string>
    <string name="order_cancellation">Order Cancellation</string>
    <string name="reason_for_cancellation">Reason for Cancellation</string>
    <string name="your_message">Your Message</string>
    <string name="cancel">Cancel</string>
    <string name="by_brand">By Brand</string>
    <string name="add_to_compare">Add to Compare</string>
    <string name="store_details">Store Details:</string>
    <string name="product_description">Product Description</string>
    <string name="address_">Address</string>
    <string name="wishlist">Wishlist</string>
    <string name="royalty_coin_">Loyalty Coin</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="store_locator">Store Locator</string>
    <string name="wishlist_empty">Wishlist is empty</string>
    <string name="same_day_delivery">Same Day\n Delivery</string>
    <string name="sold_out">Sold Out</string>
    <!--    <string name="offer_percentage">%1s /"%" offer</string>-->
    <string name="all_category">All Category</string>
    <string name="contact_us">Contact Us</string>
    <string name="installment_payment">Installment Payment</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="terms_amp_conditions">Terms &amp; Conditions</string>
    <string name="return_policy">Return Policy</string>
    <string name="pending">Pending</string>
    <string name="deliverd">Delivered</string>
    <string name="pickup_message">Pickup will be available with in 12 hours of \n placing an order</string>
    <string name="view_location">View location</string>
    <string name="thank_you">Thank You</string>
    <string name="for_your_oder">for your oder</string>
    <string name="order_processing">Your Order is now being processed. We will let you know once the order is picked from the outlet. Check the status of your Order</string>
    <string name="back_to_home">Back to Home</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="mob">Mob : %1s</string>
    <string name="email_">E-Mail %1s</string>
    <string name="wishlist_removed">Wish list removed successfully</string>
    <string name="wishlist_added">Wish list added successfully</string>
    <string name="loyalty_coins">%1s loyalty coins</string>
    <string name="bundle_product_name">You will get %s in this bundle</string>
    <string name="return_policy_contact_us">Please keep in touch with us.check our availability and contact info below</string>
    <string name="name">Name*</string>
    <string name="invoice_no">Invoice No</string>
    <string name="mobile">Mobile*</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="reason">Reason</string>
    <string name="send_message">Send Message</string>
    <string name="department">Department</string>
    <string name="email_address_">Email</string>
    <string name="call_center">Call Center:1899988</string>
    <string name="support">Support: 00965 1899988</string>
    <string name="whatsapp">Whatsapp: 00965 90911998</string>
    <string name="monday_friday">Monday to Friday: 9am-9pm</string>
    <string name="saturday_sunday">Saturday to Sunday: 9am-11pm</string>
    <string name="empty_field_error">Field Cannot be empty</string>
    <string name="invalid_email">Please enter a  valid email</string>
    <string name="something_went">Somethimng went wrong</string>
    <string name="your_pick_store">Your Pickup Store</string>
    <string name="checkout_unavailable">You cannot place order today as the today\'s order limit is already exceeded. Please try tomorrow</string>
    <string name="english">English</string>
    <string name="arabic">عربى</string>
    <string name="offer">Offer</string>
    <string name="credited">Credited</string>
    <string name="debited">Debited</string>
    <string name="cancelled">Cancelled</string>
    <string name="shipped">Shipped</string>
    <string name="date">Date : %1s</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="leave_us_message">Leave us a Message</string>
    <string name="our_address">Our Address</string>
    <string name="sku">SKU :</string>
    <string name="applied">Applied</string>
    <string name="order_id">Oder id %1s</string>
    <string name="add_cart_failed">Add to cart failed</string>
    <string name="invalid_password">Password must contain Lower Case, Upper Case, Digits &amp; Minimum length must be equal or greater than 8</string>
    <string name="wishlist_added_failed">Add to wishlist failed</string>
    <string name="wishlist_removed_failed">Remove from wishlist failed</string>
    <string name="choose_governarate">Please choose a goveranarate</string>
    <string name="choose_area">Please choose an area</string>
    <string name="choose_del_type">Please choose a delivery type</string>
    <string name="delete_cart_failed">Cart delete failed</string>
    <string name="update_cart_failed">Updating cart failed</string>
    <string name="choose_address">Please choose an address</string>
    <string name="choose_del_day">Please choose a delivery day</string>
    <string name="choose_del_time">Please choose a delivery time</string>
    <string name="choose_del_other_date">Delivery date is not available. Please choose any other date</string>
    <string name="missmatch_password">Password Missmatch</string>
    <string name="delivery">Delivery</string>
    <string name="legal_affairs">Legal Affairs</string>
    <string name="sale_wholesale">Sales / Whole Sale</string>
    <string name="customer_service">Customer Service Center</string>
    <string name="select_date">Select Date</string>
    <string name="invalid_mobile">Invalid Mobile Number</string>
</resources>