<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".ui.Fragment.AddAddressFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/iv_back"
                    android:layout_marginStart="5dp"
                    android:paddingVertical="15dp"
                    android:layout_weight=".1"
                    android:gravity="center"
                    android:src="@drawable/icon_arrow_left" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/edit_profile"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2">


            </LinearLayout>


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center|top"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filledTextField"
                    style="@style/Address_form_TextInputLayout_style"
                    android:hint="@string/first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_first_name"
                        style="@style/Address_form_TextInputEditText_style" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Address_form_TextInputLayout_style"
                    android:hint="@string/last_name">

                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/et_last_name"
                        android:background="@color/white"
                        />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Address_form_TextInputLayout_style"
                    android:hint="@string/email_address">

                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/et_email"
                        android:background="@color/white"
                        android:text="" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:passwordToggleEnabled="true"
                    style="@style/Address_form_TextInputLayout_style"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/et_password"
                        android:background="@color/white"
                        android:inputType="textPassword"

                        android:text="" />

                </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Address_form_TextInputLayout_style"
                    app:passwordToggleEnabled="true"
                    android:hint="@string/conform_password">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_confrm_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:inputType="textPassword"
                        android:text="" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="150dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_bottom_nav"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="16dp" />


            </LinearLayout>


        </ScrollView>


    </LinearLayout>
</layout>
