<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="bottom|center">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"

            android:background="#FCEEEF"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/centerImage"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_thankyou" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/thank_you"
                    android:textColor="#000"
                    android:textSize="30dp" />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/for_your_oder"
                    android:textColor="#000"
                    android:textSize="18dp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/order_processing"
                    android:textColor="#000"
                    android:textSize="15dp" />


                <TextView
                    android:id="@+id/backtohome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/back_to_home"
                    android:layout_marginBottom="30dp"
                    android:textColor="#000"
                    android:textSize="18dp" />


            </LinearLayout>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</LinearLayout>