<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragment.ContactUsFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="10dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:padding="10dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:gravity="start"
               android:fontFamily="@font/roboto"
               android:text="@string/call_center">

           </TextView>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:visibility="gone"

               android:layout_marginStart="10dp"
               android:fontFamily="@font/roboto"
               android:text="1899988">

           </TextView>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:visibility="gone"
           android:padding="10dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:gravity="start"
               android:fontFamily="@font/roboto"
               android:text="@string/support">

           </TextView>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:visibility="gone"
               android:layout_marginStart="10dp"
               android:fontFamily="@font/roboto"
               android:text="00965 1899988">

           </TextView>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:visibility="gone"
           android:padding="10dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:gravity="start"
               android:fontFamily="@font/roboto"
               android:text="@string/whatsapp">

           </TextView>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:visibility="gone"
               android:layout_marginStart="10dp"
               android:fontFamily="@font/roboto"
               android:text="00965 90911998">

           </TextView>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:padding="10dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:gravity="start"
               android:fontFamily="@font/roboto"
               android:text="@string/contact_email">

           </TextView>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:visibility="gone"
               android:fontFamily="@font/roboto"
               android:text=":   info@rathaan.com">

           </TextView>
       </LinearLayout>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:textSize="16sp"
           android:gravity="start"
           android:visibility="gone"
           android:layout_marginTop="20dp"
           android:fontFamily="@font/roboto_bold"
           android:textColor="@color/black"
           android:text="@string/leave_us_message">

       </TextView>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:visibility="gone"
           android:padding="10dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:gravity="start"
               android:fontFamily="@font/roboto"
               android:text="@string/monday_friday">

           </TextView>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:visibility="gone"
               android:fontFamily="@font/roboto"
               android:text=":  9am-9pm">

           </TextView>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:visibility="gone"
           android:padding="10dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:gravity="start"
               android:fontFamily="@font/roboto"
               android:text="@string/saturday_sunday">

           </TextView>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:visibility="gone"
               android:fontFamily="@font/roboto"
               android:text=":  9am-11pm">

           </TextView>
       </LinearLayout>
   </LinearLayout>

</FrameLayout>