<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash"
        android:gravity="center">



    </LinearLayout>


    <ImageView
        android:id="@+id/centerImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/splash" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo_new" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_bottom"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/intro_text"
        android:textColor="#fff"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_bottom"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:weightSum="2">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_english"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@color/colorPrimary_transp"

            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/english"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:visibility="visible" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_arabic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/arabic"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:visibility="visible" />
    </LinearLayout>




</RelativeLayout>
